force-app/main/default/objects/sugati__Image_Setting__c/sugati__Image_Setting__c.object-meta.xml
<CustomObject>
    <label>Image Setting</label>
    <nameField>
        <displayFormat>IS-{0000000}</displayFormat>
        <label>Image Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>