force-app/main/default/objects/sugati__Image_Setting__c/fields/sugati__S_IS_Image_Name_Contains__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IS_Image_Name_Contains__c</fullName>
    <label>Image Name Contains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>