force-app/main/default/objects/sugati__Image_Setting__c/fields/sugati__S_IS_Image_Name_Does_Not_Contain__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IS_Image_Name_Does_Not_Contain__c</fullName>
    <label>Image Name Does Not Contain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>