force-app/main/default/objects/sugati__Image_Setting__c/fields/sugati__S_IS_Image_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IS_Image_Source__c</fullName>
    <label>Image Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Where To Go</fullName>
            </value>
            <value>
                <fullName>What To Do</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Room Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>