force-app/main/default/objects/sugati__Image_Setting__c/fields/sugati__S_IS_Number_of_Images__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IS_Number_of_Images__c</fullName>
    <label>Number of Images</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>