force-app/main/default/objects/sugati__Image_Setting__c/fields/sugati__S_IS_Record_Type_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IS_Record_Type_DeveloperName__c</fullName>
    <label>Record Type DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>