force-app/main/default/objects/sugati__Image_Setting__c/fields/sugati__S_IS_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IS_Record_Type_Id__c</fullName>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>